data/all_generated_tests/raw_wast_tests/block_IncorrectHandlingofControlFlowAcrossModuleBoundaries_153.wast
;; 4. **Branch Out of Block and Imported Function Return**:    - Construct a scenario with an exported function that branches out of a `block` and then calls an imported function. This test will ensure that control flow is handled correctly, and the operand stack is managed accurately throughout the execution flow across module boundaries.

(assert_invalid 
  (module 
    (import "env" "foo" (func $foo (result i32))) 
    (func $branch-out-import-call 
      (block (result i32) 
        (br 0) 
        (call $foo)
      )
    )
  ) 
  "type mismatch"
)